--- a/ebooks/modern/history_gy/zhuangyuan/zynz01.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz01.html
@@ -1182,5 +1182,5 @@
 <p>
 　　这两件事连在一起，洪钧不知道有何意义？一时也无暇多问，只答一句：“我
 午前一定到。”
-<hr><a href="zynz02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
