--- a/ebooks/modern/history_gy/zhuangyuan/zynz02.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz02.html
@@ -1726,5 +1726,5 @@
 <p>
 　　雨倒是停了。一街的流潦，路很不好走。洪钧有着说不出的懊恼，自己都想不
 明白，一直是好好的，何以临别之时，弄成这般模样？
-<hr><a href="zynz03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
