--- a/ebooks/modern/history_gy/zhuangyuan/zynz03.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz03.html
@@ -687,5 +687,5 @@
 <p>
 　　真是言者无意，听者有心，那一句“行得好心有好报”，恰好打入李婆婆的心
 坎，默然不语，表示不反对蔼如的想法了。
-<hr><a href="zynz04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
