--- a/ebooks/modern/history_gy/zhuangyuan/zynz04.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz04.html
@@ -429,5 +429,5 @@
 <p>
 　　锦心绣口，玉貌绮年，如此佳人，可望而不可即，实在于心不甘！海行途中，
 凭栏远眺，两处风情，万重烟水，洪钧毕竟领略到断肠相思的滋味了！
-<hr><a href="zynz05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
