--- a/ebooks/modern/history_gy/zhuangyuan/zynz05.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz05.html
@@ -905,5 +905,5 @@
 “无非滞感停食之类的小毛病，陆家伯伯怎样不能看？”
 <p>
 　　“是。”洪大太顺从丈夫，“明天一早去接陆家伯伯。”
-<hr><a href="zynz06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
