--- a/ebooks/modern/history_gy/zhuangyuan/zynz06.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz06.html
@@ -2136,5 +2136,5 @@
 　　听到这里，洪钧忽有自惭形秽之感，而更多的是自恨，恨清寒的家世，恨不能
 一举成名，恨早有妻室，恨目光不够锐利，看不透蔼如，最恨的是不知何以如此不
 能稍作克制，定情于这样一个全然与心境、身份不合的地方，实在太亵慢了蔼如。
-<hr><a href="zynz07.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz07.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
