--- a/ebooks/modern/history_gy/zhuangyuan/zynz07.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz07.html
@@ -679,5 +679,5 @@
 刚想发问，蔼如翻身而起，不容她开口，便拉着她重新入局；脸上笑容尽敛，与刚
 才那种近乎放浪形骸的态度相较，益显得一本正经令人凛然。尤使霞初觉得奇怪的，
 不明白她何以能如此控制自己？好笑有趣的事，说抛开便抛开。
-<hr><a href="zynz08.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz08.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
