--- a/ebooks/modern/history_gy/zhuangyuan/zynz08.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz08.html
@@ -802,5 +802,5 @@
 　　“发疯了！有什么聊不完的，要聊一夜？”
 <p>
 　　“聊你的三爷啊！”
-<hr><a href="zynz09.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz09.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
