--- a/ebooks/modern/history_gy/zhuangyuan/zynz09.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz09.html
@@ -663,5 +663,5 @@
 <p>
 　　洪太太不作声，扶着墙壁，慢慢走向窗前；仰脸望着窗外，西下的余晖斜照，
 照出她一张蜡黄的脸，两滴明亮的泪珠。
-<hr><a href="zynz10.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz10.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
