--- a/ebooks/modern/history_gy/zhuangyuan/zynz10.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz10.html
@@ -1374,5 +1374,5 @@
 <p>
 　　“我一定会写。”洪钧停了一下，用很清楚的声音念道：“‘天涯海角同荣谢，
 心有灵犀一点通’。”
-<hr><a href="zynz11.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz11.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
