--- a/ebooks/modern/history_gy/zhuangyuan/zynz12.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz12.html
@@ -781,5 +781,5 @@
 <p>
 　　于是从第二天起，由小王妈与马地保陪着，李婆婆母女遍叩烟台寺庙尼庵，许
 下心愿，倘能保佑洪钧得大魁天下，定当重塑金身，以答神佛。
-<hr><a href="zynz13.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz13.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
