--- a/ebooks/modern/history_gy/zhuangyuan/zynz13.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz13.html
@@ -1030,5 +1030,5 @@
 　　这不是片刻之间，所能作得下决定的。然则眼前的应付办法，无非一个拖字。
 <p>
 　　“就这样！”他不自觉地自语：“静以观变。”
-<hr><a href="zynz14.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz14.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
