--- a/ebooks/modern/history_gy/zhuangyuan/zynz11.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz11.html
@@ -392,5 +392,5 @@
 了。”
 <p>
 　　“那好。”李婆婆打个呵欠，“你快去睡吧！睡一觉起来，别忘了叫人去寄信。”
-<hr><a href="zynz12.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz12.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
