--- a/ebooks/modern/history_gy/zhuangyuan/zynz14.html
+++ b/ebooks/modern/history_gy/zhuangyuan/zynz14.html
@@ -749,5 +749,5 @@
 行了’！”
 <p>
 　　“想不当也不行了！”吴大澄默念着这句话，心又往下沉了。
-<hr><a href="zynz15.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="zynz15.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
