--- a/ebooks/modern/history/china_100y/index.html
+++ b/ebooks/modern/history/china_100y/index.html
@@ -16,7 +16,7 @@
 <center><table BORDER=3 CELLPADDING=2 WIDTH="600" >
 <tr>
 <td COLSPAN="2">
-<center><a href="Preface/index.html">引子</a></center>
+<center><a href="preface/index.html">引子</a></center>
 </td>
 </tr>
 
