--- a/ebooks/modern/history/diangyinshi/025.htm
+++ b/ebooks/modern/history/diangyinshi/025.htm
@@ -1,6 +1,6 @@
 <HTML><head><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><title>世界电影史</title>
 </head>
-<A HREF="_content.html">回目录</A>
+<A HREF="content.html">回目录</A>
 <CENTER><B><FONT FACE="楷体_GB2312"><FONT COLOR="#FF6666"><FONT SIZE=5>第二十二章　动画片</FONT></FONT></font></B></CENTER>
 <HR WIDTH="85%">
 
