--- a/ebooks/modern/history/diangyinshi/022.htm
+++ b/ebooks/modern/history/diangyinshi/022.htm
@@ -1,6 +1,6 @@
 <HTML><head><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><title>世界电影史</title>
 </head>
-<A HREF="_content.html">回目录</A>
+<A HREF="content.html">回目录</A>
 <CENTER><FONT COLOR="red">第十九章　1945年至1962年的好莱坞</font></CENTER>
 <HR WIDTH="85%">
 <p>
