--- a/ebooks/modern/history/diangyinshi/024.htm
+++ b/ebooks/modern/history/diangyinshi/024.htm
@@ -1,6 +1,6 @@
 <HTML><head><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><title>世界电影史</title>
 </head>
-<A HREF="_content.html">回目录</A>
+<A HREF="content.html">回目录</A>
 <CENTER><FONT COLOR="red">第二十一章　苏联和人民民主国家</font></CENTER>
 <HR WIDTH="85%">
 
