--- a/ebooks/modern/history/diangyinshi/026.htm
+++ b/ebooks/modern/history/diangyinshi/026.htm
@@ -1,6 +1,6 @@
 <HTML><head><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><title>世界电影史</title>
 </head>
-<A HREF="_content.html">回目录</A>
+<A HREF="content.html">回目录</A>
 
 
 
