官场现形记

--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -3,8 +3,8 @@
 <p align=center>
 
 <br><a href="classic/popnovel/rulinwaishi/content.html">儒林外史</a>
-<br>官场现形记　　　\Clasic\PopNovel\GuanChang
-<br>警世通言　　　　\Clasic\PopNovel\JingShiTongYan
+<br><a href="./classic/popnovel/guanchang/content.html">官场现形记</a>
+<br><a href="classic/popnovel/jingshitongyan/content.html">警世通言</a>
 <br>醒世恒言　　　　\Clasic\PopNovel\XingShiHengYan
 <br>喻世明言　　　　\Clasic\PopNovel\YuShiMingYan
 <br>初刻拍案惊奇　　\Clasic\PopNovel\PaiAnJingQi_1
