--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -3,9 +3,24 @@
 <p align=center>
 
 <br><a href="classic/popnovel/rulinwaishi/content.html">儒林外史</a>
-<br><a href="./classic/popnovel/guanchang/content.html">官场现形记</a>
+<br><a href="classic/popnovel/guanchang/content.html">官场现形记</a>
 <br><a href="classic/popnovel/jingshitongyan/content.html">警世通言</a>
-<br>醒世恒言　　　　\Clasic\PopNovel\XingShiHengYan
+<br><a href="classic/popnovel/xingshihengyan/content.html">醒世恒言</a> 
+<br><a href="classic/popnovel/yushimingyan/content.html">喻世明言</a>
+<br><a href="classic/history_yy/houhanyanyi/content.html"></a> 
+<br><a href="classic/history_yy/nanbeishiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/mingguoyanyi/content.html"></a> 
+<br><a href="classic/history_yy/tangshiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/qingshiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/mingshiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/liangjienyanyi/content.html"></a> 
+<br><a href="classic/history_yy/yuanshiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/qianhanyanyi/content.html"></a> 
+<br><a href="classic/history_yy/songshiyanyi/content.html"></a> 
+<br><a href="classic/history_yy/wudaiyanyi/content.html"></a> 
+<br><a href="classic/popnovel/paianjingqi_2/content.html"></a> 
+<br><a href="classic/popnovel/paianjingqi_1/content.html"></a> 
+
 <br>喻世明言　　　　\Clasic\PopNovel\YuShiMingYan
 <br>初刻拍案惊奇　　\Clasic\PopNovel\PaiAnJingQi_1
 <br>二刻拍案惊奇　　\Clasic\PopNovel\PaiAnJingQi_2
