二刻拍案惊奇

--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -7,6 +7,8 @@
 <br><a href="classic/popnovel/jingshitongyan/content.html">警世通言</a>
 <br><a href="classic/popnovel/xingshihengyan/content.html">醒世恒言</a> 
 <br><a href="classic/popnovel/yushimingyan/content.html">喻世明言</a>
+<br><a href="classic/popnovel/paianjingqi_1/content.html">初刻拍案惊奇</a> 
+<br><a href="classic/popnovel/paianjingqi_2/content.html">二刻拍案惊奇</a> 
 <br><a href="classic/history_yy/houhanyanyi/content.html"></a> 
 <br><a href="classic/history_yy/nanbeishiyanyi/content.html"></a> 
 <br><a href="classic/history_yy/mingguoyanyi/content.html"></a> 
@@ -18,12 +20,6 @@
 <br><a href="classic/history_yy/qianhanyanyi/content.html"></a> 
 <br><a href="classic/history_yy/songshiyanyi/content.html"></a> 
 <br><a href="classic/history_yy/wudaiyanyi/content.html"></a> 
-<br><a href="classic/popnovel/paianjingqi_2/content.html"></a> 
-<br><a href="classic/popnovel/paianjingqi_1/content.html"></a> 
-
-<br>喻世明言　　　　\Clasic\PopNovel\YuShiMingYan
-<br>初刻拍案惊奇　　\Clasic\PopNovel\PaiAnJingQi_1
-<br>二刻拍案惊奇　　\Clasic\PopNovel\PaiAnJingQi_2
 <br>　　　　
 <br>李白诗全集　　　\Clasic\Poetry\LiBaiQuanJi.htm
 <br>诗律浅说　　　　\Clasic\Poetry\ShiLiuQianShuo.html
