唐诗三百首

--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -21,9 +21,10 @@
 <br><a href="classic/history_yy/songshiyanyi/content.html"></a> 
 <br><a href="classic/history_yy/wudaiyanyi/content.html"></a> 
 <br>　　　　
-<br>李白诗全集　　　\Clasic\Poetry\LiBaiQuanJi.htm
-<br>诗律浅说　　　　\Clasic\Poetry\ShiLiuQianShuo.html
-<br>唐诗三百首　　　\Clasic\Poetry\TangShi_300.html
+<br><a href="classic/poetry/libaiquanji.htm">李白诗全集</a> 
+<br><a href="classic/poetry/shiliuqianshuo.htm">诗律浅说</a>
+<br><a href="classic/poetry/tangshi_300.html">唐诗三百首</a>
+
 <br>　　　　
 <br>评毛说诗　　　　\Modern\Poetry\Poem_MaoZD.htm
 <br>　　　　
