蔡东藩历史系列

--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -9,44 +9,32 @@
 <br><a href="classic/popnovel/yushimingyan/content.html">喻世明言</a>
 <br><a href="classic/popnovel/paianjingqi_1/content.html">初刻拍案惊奇</a> 
 <br><a href="classic/popnovel/paianjingqi_2/content.html">二刻拍案惊奇</a> 
-<br><a href="classic/history_yy/houhanyanyi/content.html"></a> 
-<br><a href="classic/history_yy/nanbeishiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/mingguoyanyi/content.html"></a> 
-<br><a href="classic/history_yy/tangshiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/qingshiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/mingshiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/liangjienyanyi/content.html"></a> 
-<br><a href="classic/history_yy/yuanshiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/qianhanyanyi/content.html"></a> 
-<br><a href="classic/history_yy/songshiyanyi/content.html"></a> 
-<br><a href="classic/history_yy/wudaiyanyi/content.html"></a> 
 <br>　　　　
 <br><a href="classic/poetry/libaiquanji.htm">李白诗全集</a> 
 <br><a href="classic/poetry/shiliuqianshuo.htm">诗律浅说</a>
 <br><a href="classic/poetry/tangshi_300.html">唐诗三百首</a>
-
 <br>　　　　
 <br>评毛说诗　　　　\Modern\Poetry\Poem_MaoZD.htm
 <br>　　　　
-<br>古文观止　　　　\Clasic\Prose\GuWenGuanZhi
-<br>散文　　　　　　\Clasic\Prose\Short_Pop
+<br><a href="classic/prose/guwenguanzhi/gwgz.html">古文观止</a>
+<br><a href="classic/prose/short_pop/0_INDEX.html">散文</a>
 <br>　　　　
 <br>　　　　
 <br>中国百年史　　　\Modern\History\China_100y
 <br>世界电影史　　　\Modern\History\DiangYinShi
 <br>　　　　
 <br>------- 蔡东藩历史系列 -------
-<br>后汉演义　　　　\Clasic\History_CDP\HouHanYanYi
-<br>两晋演义　　　　\Clasic\History_CDP\LiangJienYanYi
-<br>民国演义　　　　\Clasic\History_CDP\MingGuoYanYi
-<br>明史演义　　　　\Clasic\History_CDP\MingShiYanYi
-<br>南北史演义　　　\Clasic\History_CDP\NanBeiShiYanYi
-<br>前汉演义　　　　\Clasic\History_CDP\QianHanYanYi
-<br>清史演义　　　　\Clasic\History_CDP\QingShiYanYi
-<br>宋史演义　　　　\Clasic\History_CDP\SongShiYanYi
-<br>唐史演义　　　　\Clasic\History_CDP\TangShiYanYi
-<br>五代史演义　　　\Clasic\History_CDP\WuDaiYanYi
-<br>元史演义　　　　\Clasic\History_CDP\YuanShiYanYi
+<br><a href="classic/history_yy/houhanyanyi/content.html">后汉演义</a> 
+<br><a href="classic/history_yy/liangjienyanyi/content.html">两晋演义</a> 
+<br><a href="classic/history_yy/mingguoyanyi/content.html">民国演义</a> 
+<br><a href="classic/history_yy/mingshiyanyi/content.html">明史演义</a> 
+<br><a href="classic/history_yy/nanbeishiyanyi/content.html">南北史演义</a> 
+<br><a href="classic/history_yy/qianhanyanyi/content.html">前汉演义</a> 
+<br><a href="classic/history_yy/qingshiyanyi/content.html">清史演义</a> 
+<br><a href="classic/history_yy/songshiyanyi/content.html">宋史演义</a> 
+<br><a href="classic/history_yy/tangshiyanyi/content.html">唐史演义</a> 
+<br><a href="classic/history_yy/wudaiyanyi/content.html">五代史演义</a> 
+<br><a href="classic/history_yy/yuanshiyanyi/content.html">元史演义</a> 
 <br>　　　　
 <br>------- 高阳历史小说 -------
 <br>八大胡同　　　　\Modern\History_GY\BaDaHuTong
