高阳历史小说

--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -14,14 +14,14 @@
 <br><a href="classic/poetry/shiliuqianshuo.htm">诗律浅说</a>
 <br><a href="classic/poetry/tangshi_300.html">唐诗三百首</a>
 <br>　　　　
-<br>评毛说诗　　　　\Modern\Poetry\Poem_MaoZD.htm
+<br><a href="modern/poetry/poem_maozd.htm">评毛说诗</a>
 <br>　　　　
 <br><a href="classic/prose/guwenguanzhi/gwgz.html">古文观止</a>
 <br><a href="classic/prose/short_pop/0_INDEX.html">散文</a>
 <br>　　　　
 <br>　　　　
-<br>中国百年史　　　\Modern\History\China_100y
-<br>世界电影史　　　\Modern\History\DiangYinShi
+<br><a href="modern/history/china_100y/index.html">中国百年史</a>
+<br><a href="modern/history/diangyinshi/content.html">世界电影史</a>
 <br>　　　　
 <br>------- 蔡东藩历史系列 -------
 <br><a href="classic/history_yy/houhanyanyi/content.html">后汉演义</a> 
@@ -37,26 +37,26 @@
 <br><a href="classic/history_yy/yuanshiyanyi/content.html">元史演义</a> 
 <br>　　　　
 <br>------- 高阳历史小说 -------
-<br>八大胡同　　　　\Modern\History_GY\BaDaHuTong
-<br>草莽英雄　　　　\Modern\History_GY\CaoMangYiXong
-<br>大将曹彬　　　　\Modern\History_GY\DaJiangCaoBin
-<br>董小宛　　　　　\Modern\History_GY\DongXiaoWan
-<br>恩怨江湖　　　　\Modern\History_GY\EnYuanJiangHu
-<br>粉墨春秋　　　　\Modern\History_GY\FenMoChunQiu
-<br>红顶商人胡雪岩　\Modern\History_GY\HuXueYan
-<br>李鸿章　　　　　\Modern\History_GY\LiHongZhang
-<br>吕不韦　　　　　\Modern\History_GY\LiuBuWei.html
-<br>买命　　　　　　\Modern\History_GY\MaiMing.html
-<br>母子君臣　　　　\Modern\History_GY\MuZiJunChen
-<br>清官册　　　　　\Modern\History_GY\QinGuan
-<br>任公与刁间　　　\Modern\History_GY\RengHong.html
-<br>缇萦　　　　　　\Modern\History_GY\TiYing
-<br>王昭君　　　　　\Modern\History_GY\WangZaoJun
-<br>玉垒浮云　　　　\Modern\History_GY\YuLeiFuYun
-<br>正德外记　　　　\Modern\History_GY\ZhenDe
-<br>假官真做　　　　\Modern\History_GY\ZhenGuan.html
-<br>状元娘子　　　　\Modern\History_GY\ZhuangYuan
-<br>临邛卓家　　　　\Modern\History_GY\ZhuoJia.html
+<br><a href="modern/history_gy/badahutong/content.html">八大胡同</a> 
+<br><a href="modern/history_gy/caomangyixong/content.html">草莽英雄</a> 
+<br><a href="modern/history_gy/dajiangcaobin/content.html">大将曹彬</a> 
+<br><a href="modern/history_gy/dongxiaowan/content.html">董小宛</a>
+<br><a href="modern/history_gy/enyuanjianghu/content.html">恩怨江湖</a> 
+<br><a href="modern/history_gy/fenmochunqiu/content.html">粉墨春秋</a> 
+<br><a href="modern/history_gy/huxueyan/content.html">红顶商人胡雪岩</a> 
+<br><a href="modern/history_gy/lihongzhang/content.html">李鸿章</a> 
+<br><a href="modern/history_gy/liubuwei.html">吕不韦</a> 
+<br><a href="modern/history_gy/maiming.html">买命</a> 
+<br><a href="modern/history_gy/muzijunchen/content.html">母子君臣</a> 
+<br><a href="modern/history_gy/qinguan/content.html">清官册</a> 
+<br><a href="modern/history_gy/renghong.html">任公与刁间</a> 
+<br><a href="modern/history_gy/tiying/content.html">缇萦</a> 
+<br><a href="modern/history_gy/wangzaojun/content.html">王昭君</a> 
+<br><a href="modern/history_gy/yuleifuyun/content.html">玉垒浮云</a> 
+<br><a href="modern/history_gy/zhende/content.html">正德外记</a> 
+<br><a href="modern/history_gy/zhenguan.html">假官真做</a> 
+<br><a href="modern/history_gy/zhuangyuan/content.html">状元娘子</a> 
+<br><a href="modern/history_gy/zhuojia.html">临邛卓家</a> 
 <br>　　　　
 <br>茶　　　　　　　\Sound_Books\Tea
 <br>
