--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -58,7 +58,7 @@
 <br><a href="modern/history_gy/zhuangyuan/content.html">状元娘子</a> 
 <br><a href="modern/history_gy/zhuojia.html">临邛卓家</a> 
 <br>　　　　
-<br>茶　　　　　　　\Sound_Books\Tea
+<br><a href="sound_books/tea/index.html">茶</a> 
 <br>
 <br>
 </p>
