--- a/ebooks/book_chn/sound_books/tea/index.html
+++ b/ebooks/book_chn/sound_books/tea/index.html
@@ -29,73 +29,73 @@
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_02.mp3>02</a></center> 
+<center><a href=tea_02.mp3>02</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_03.mp3>03</a></center> 
+<center><a href=tea_03.mp3>03</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_04.mp3>04</a></center> 
+<center><a href=tea_04.mp3>04</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_05.mp3>05</a></center> 
+<center><a href=tea_05.mp3>05</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_06.mp3>06</a></center> 
+<center><a href=tea_06.mp3>06</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_07.mp3>07</a></center> 
+<center><a href=tea_07.mp3>07</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_08.mp3>08</a></center> 
+<center><a href=tea_08.mp3>08</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_09.mp3>09</a></center> 
+<center><a href=tea_09.mp3>09</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_10.mp3>10</a></center> 
+<center><a href=tea_10.mp3>10</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_11.mp3>11</a></center> 
+<center><a href=tea_11.mp3>11</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_12.mp3>12</a></center> 
+<center><a href=tea_12.mp3>12</a></center> 
 </td>
 </tr>
 
 <tr>
 <td WIDTH=150> 
-<center><a href=sound_books/tea/tea_13.mp3>13</a></center> 
+<center><a href=tea_13.mp3>13</a></center> 
 </td>
 </tr>
 
