--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -1,5 +1,12 @@
 <html><head>
-<meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
+<meta http-equiv="Content-Type" content="text/html" charset="gb2312">
+<title>中文书籍</title>
+<BODY BGCOLOR="#FFF4E4">
+
+<font size=-2>　</font>
+<center><b><font face="楷体_GB2312"><font color="#FF6600"><font size=+3>中文书籍</font></font></font></b>
+<br><font size=-2>　</font></center>
+
 <p align=center>
 
 <br><a href="classic/popnovel/rulinwaishi/content.html">儒林外史</a>
