--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -15,7 +15,7 @@
 <br><a href="classic/popnovel/paianjingqi_2/content.html">二刻拍案惊奇</a> 
 <br>　　　　
 <br><a href="classic/poetry/libaiquanji.htm">李白诗全集</a> 
-<br><a href="classic/poetry/shiliuqianshuo.htm">诗律浅说</a>
+<br><a href="classic/poetry/shiliuqianshuo.html">诗律浅说</a>
 <br><a href="classic/poetry/tangshi_300.html">唐诗三百首</a>
 <br>　　　　
 <br><a href="modern/poetry/poem_maozd.htm">评毛说诗</a>
