--- a/ebooks/book_chn/index.html
+++ b/ebooks/book_chn/index.html
@@ -3,8 +3,8 @@
 <title>中文书籍</title>
 <BODY BGCOLOR="#FFF4E4">
 
+<font size=-2>　</font>
 <center><b><font face="楷体_GB2312"><font color="#FF6600"><font size=+3>中文书籍</font></font></font></b>
-
 <p align=center>
 <br><a href="classic/popnovel/rulinwaishi/content.html">儒林外史</a>
 <br><a href="classic/popnovel/guanchang/content.html">官场现形记</a>
